Bug 439930 - LeakTestSuite failing with JDK 9.
- Fix LeakTestSuite when running with Tycho, or through the test
framework (test.xml) with JDK 9 or higher.

Change-Id: I935a7c659dca8b3891b70609de8ad88a7f53b668
Signed-off-by: Roland Grunberg <rgrunber@redhat.com>